src/prev/phase/synan/PrevParser.java
// Generated from synan/PrevParser.g4 by ANTLR 4.9.1


	package prev.phase.synan;
	
	import java.util.*;
	
	import prev.common.report.*;
	import prev.phase.lexan.*;
	import prev.phase.abstr.*;

	import prev.data.ast.tree.*;
	import prev.data.ast.tree.decl.*;
	import prev.data.ast.tree.expr.*;
	import prev.data.ast.tree.stmt.*;
	import prev.data.ast.tree.type.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrevParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LBRACKET=3, RBRACKET=4, LBRACE=5, RBRACE=6, DOT=7, 
		COMMA=8, SEMIC=9, COLON=10, AND=11, NOT=12, OR=13, PTR=14, EQU=15, NEQ=16, 
		LTH=17, GTH=18, LEQ=19, GEQ=20, ADD=21, SUB=22, MUL=23, DIV=24, MOD=25, 
		IS=26, VOID=27, CHAR=28, INT=29, BOOL=30, DEL=31, DO=32, ELSE=33, FUN=34, 
		IF=35, NEW=36, THEN=37, TYP=38, VAR=39, WHERE=40, WHILE=41, VOIDCONST=42, 
		BOOLCONST=43, POINTERCONST=44, CHARCONST=45, STRINGCONST=46, COMMENT=47, 
		INTEGERCONST=48, IDENTIFIER=49, WHITESPACE=50;
	public static final int
		RULE_source = 0, RULE_decl = 1, RULE_type = 2, RULE_expr = 3, RULE_stmt = 4;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "decl", "type", "expr", "stmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "';'", 
			"':'", "'&'", "'!'", "'|'", "'^'", "'=='", "'!='", "'<'", "'>'", "'<='", 
			"'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'void'", "'char'", 
			"'int'", "'bool'", "'del'", "'do'", "'else'", "'fun'", "'if'", "'new'", 
			"'then'", "'typ'", "'var'", "'where'", "'while'", "'none'", null, "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
			"DOT", "COMMA", "SEMIC", "COLON", "AND", "NOT", "OR", "PTR", "EQU", "NEQ", 
			"LTH", "GTH", "LEQ", "GEQ", "ADD", "SUB", "MUL", "DIV", "MOD", "IS", 
			"VOID", "CHAR", "INT", "BOOL", "DEL", "DO", "ELSE", "FUN", "IF", "NEW", 
			"THEN", "TYP", "VAR", "WHERE", "WHILE", "VOIDCONST", "BOOLCONST", "POINTERCONST", 
			"CHARCONST", "STRINGCONST", "COMMENT", "INTEGERCONST", "IDENTIFIER", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrevParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrevParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SourceContext extends ParserRuleContext {
		public AstTrees<AstDecl> ast;
		public DeclContext decl;
		public TerminalNode EOF() { return getToken(PrevParser.EOF, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 Vector<AstDecl> decls = new Vector<AstDecl>(); 
			setState(14); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(11);
				((SourceContext)_localctx).decl = decl();
				 decls.add(((SourceContext)_localctx).decl.ast); 
				}
				}
				setState(16); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUN) | (1L << TYP) | (1L << VAR))) != 0) );
			 ((SourceContext)_localctx).ast =  new AstTrees<AstDecl>(decls); 
			setState(19);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public AstDecl ast;
		public Token TYP;
		public Token IDENTIFIER;
		public TypeContext type;
		public Token VAR;
		public Token FUN;
		public ExprContext expr;
		public TerminalNode TYP() { return getToken(PrevParser.TYP, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(PrevParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PrevParser.IDENTIFIER, i);
		}
		public TerminalNode IS() { return getToken(PrevParser.IS, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode VAR() { return getToken(PrevParser.VAR, 0); }
		public List<TerminalNode> COLON() { return getTokens(PrevParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PrevParser.COLON, i);
		}
		public TerminalNode FUN() { return getToken(PrevParser.FUN, 0); }
		public TerminalNode LPAREN() { return getToken(PrevParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PrevParser.RPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(PrevParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PrevParser.COMMA, i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(21);
				((DeclContext)_localctx).TYP = match(TYP);
				setState(22);
				((DeclContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(23);
				match(IS);
				setState(24);
				((DeclContext)_localctx).type = type();
				 ((DeclContext)_localctx).ast =  new AstTypeDecl(Location.createLocation(((DeclContext)_localctx).TYP, ((DeclContext)_localctx).type.ast), (((DeclContext)_localctx).IDENTIFIER!=null?((DeclContext)_localctx).IDENTIFIER.getText():null), ((DeclContext)_localctx).type.ast) ; 
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(27);
				((DeclContext)_localctx).VAR = match(VAR);
				setState(28);
				((DeclContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(29);
				match(COLON);
				setState(30);
				((DeclContext)_localctx).type = type();
				 ((DeclContext)_localctx).ast =  new AstVarDecl(Location.createLocation(((DeclContext)_localctx).VAR, ((DeclContext)_localctx).type.ast), (((DeclContext)_localctx).IDENTIFIER!=null?((DeclContext)_localctx).IDENTIFIER.getText():null), ((DeclContext)_localctx).type.ast) ; 
				}
				break;
			case FUN:
				enterOuterAlt(_localctx, 3);
				{
				setState(33);
				((DeclContext)_localctx).FUN = match(FUN);
				setState(34);
				((DeclContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(35);
				match(LPAREN);
				 Vector<AstParDecl> parameters = new Vector<AstParDecl>(); 
				 String funName = (((DeclContext)_localctx).IDENTIFIER!=null?((DeclContext)_localctx).IDENTIFIER.getText():null); 
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(38);
					((DeclContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					setState(39);
					match(COLON);
					setState(40);
					((DeclContext)_localctx).type = type();
					 parameters.add(new AstParDecl(Location.createLocation(((DeclContext)_localctx).IDENTIFIER, ((DeclContext)_localctx).type.ast), (((DeclContext)_localctx).IDENTIFIER!=null?((DeclContext)_localctx).IDENTIFIER.getText():null), ((DeclContext)_localctx).type.ast)); 
					setState(50);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(42);
						match(COMMA);
						setState(43);
						((DeclContext)_localctx).IDENTIFIER = match(IDENTIFIER);
						setState(44);
						match(COLON);
						setState(45);
						((DeclContext)_localctx).type = type();
						 parameters.add(new AstParDecl(Location.createLocation(((DeclContext)_localctx).IDENTIFIER, ((DeclContext)_localctx).type.ast), (((DeclContext)_localctx).IDENTIFIER!=null?((DeclContext)_localctx).IDENTIFIER.getText():null), ((DeclContext)_localctx).type.ast)); 
						}
						}
						setState(52);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(55);
				match(RPAREN);
				setState(56);
				match(COLON);
				setState(57);
				((DeclContext)_localctx).type = type();
				 Location location = Location.createLocation(((DeclContext)_localctx).FUN, ((DeclContext)_localctx).type.ast); 
				 AstExpr astExpr = null; 
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IS) {
					{
					setState(60);
					match(IS);
					setState(61);
					((DeclContext)_localctx).expr = expr(0);
					 location = Location.createLocation(((DeclContext)_localctx).FUN, ((DeclContext)_localctx).expr.ast); 
					 astExpr = ((DeclContext)_localctx).expr.ast; 
					}
				}

				 ((DeclContext)_localctx).ast =  new AstFunDecl(location, funName, new AstTrees<AstParDecl>(parameters), ((DeclContext)_localctx).type.ast, astExpr); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public AstType ast;
		public Token VOID;
		public Token CHAR;
		public Token INT;
		public Token BOOL;
		public Token IDENTIFIER;
		public Token LBRACKET;
		public ExprContext expr;
		public TypeContext type;
		public Token PTR;
		public Token LBRACE;
		public Token RBRACE;
		public Token LPAREN;
		public Token RPAREN;
		public TerminalNode VOID() { return getToken(PrevParser.VOID, 0); }
		public TerminalNode CHAR() { return getToken(PrevParser.CHAR, 0); }
		public TerminalNode INT() { return getToken(PrevParser.INT, 0); }
		public TerminalNode BOOL() { return getToken(PrevParser.BOOL, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(PrevParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PrevParser.IDENTIFIER, i);
		}
		public TerminalNode LBRACKET() { return getToken(PrevParser.LBRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(PrevParser.RBRACKET, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode PTR() { return getToken(PrevParser.PTR, 0); }
		public TerminalNode LBRACE() { return getToken(PrevParser.LBRACE, 0); }
		public List<TerminalNode> COLON() { return getTokens(PrevParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PrevParser.COLON, i);
		}
		public TerminalNode RBRACE() { return getToken(PrevParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PrevParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PrevParser.COMMA, i);
		}
		public TerminalNode LPAREN() { return getToken(PrevParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PrevParser.RPAREN, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		int _la;
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				((TypeContext)_localctx).VOID = match(VOID);
				 ((TypeContext)_localctx).ast =  new AstAtomType(Location.createLocation(((TypeContext)_localctx).VOID), AstAtomType.Type.VOID); 
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				((TypeContext)_localctx).CHAR = match(CHAR);
				 ((TypeContext)_localctx).ast =  new AstAtomType(Location.createLocation(((TypeContext)_localctx).CHAR), AstAtomType.Type.CHAR); 
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				((TypeContext)_localctx).INT = match(INT);
				 ((TypeContext)_localctx).ast =  new AstAtomType(Location.createLocation(((TypeContext)_localctx).INT), AstAtomType.Type.INT); 
				}
				break;
			case BOOL:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				((TypeContext)_localctx).BOOL = match(BOOL);
				 ((TypeContext)_localctx).ast =  new AstAtomType(Location.createLocation(((TypeContext)_localctx).BOOL), AstAtomType.Type.BOOL); 
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				((TypeContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				 ((TypeContext)_localctx).ast =  new AstNameType(Location.createLocation(((TypeContext)_localctx).IDENTIFIER) , (((TypeContext)_localctx).IDENTIFIER!=null?((TypeContext)_localctx).IDENTIFIER.getText():null)); 
				}
				break;
			case LBRACKET:
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				((TypeContext)_localctx).LBRACKET = match(LBRACKET);
				setState(82);
				((TypeContext)_localctx).expr = expr(0);
				setState(83);
				match(RBRACKET);
				setState(84);
				((TypeContext)_localctx).type = type();
				 ((TypeContext)_localctx).ast =  new AstArrType(Location.createLocation(((TypeContext)_localctx).LBRACKET, ((TypeContext)_localctx).type.ast), ((TypeContext)_localctx).type.ast, ((TypeContext)_localctx).expr.ast); 
				}
				break;
			case PTR:
				enterOuterAlt(_localctx, 7);
				{
				setState(87);
				((TypeContext)_localctx).PTR = match(PTR);
				setState(88);
				((TypeContext)_localctx).type = type();
				 ((TypeContext)_localctx).ast =  new AstPtrType(Location.createLocation(((TypeContext)_localctx).PTR, ((TypeContext)_localctx).type.ast), ((TypeContext)_localctx).type.ast); 
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 8);
				{
				setState(91);
				((TypeContext)_localctx).LBRACE = match(LBRACE);
				setState(92);
				((TypeContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(93);
				match(COLON);
				setState(94);
				((TypeContext)_localctx).type = type();
				 Vector<AstCompDecl> compDecls = new Vector<AstCompDecl>(); 
				 compDecls.add(new AstCompDecl(Location.createLocation(((TypeContext)_localctx).IDENTIFIER, ((TypeContext)_localctx).type.ast), (((TypeContext)_localctx).IDENTIFIER!=null?((TypeContext)_localctx).IDENTIFIER.getText():null), ((TypeContext)_localctx).type.ast)); 
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(97);
					match(COMMA);
					setState(98);
					((TypeContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					setState(99);
					match(COLON);
					setState(100);
					((TypeContext)_localctx).type = type();
					 compDecls.add(new AstCompDecl(Location.createLocation(((TypeContext)_localctx).IDENTIFIER, ((TypeContext)_localctx).type.ast), (((TypeContext)_localctx).IDENTIFIER!=null?((TypeContext)_localctx).IDENTIFIER.getText():null), ((TypeContext)_localctx).type.ast));
					}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(108);
				((TypeContext)_localctx).RBRACE = match(RBRACE);
				 ((TypeContext)_localctx).ast =  new AstRecType(Location.createLocation(((TypeContext)_localctx).LBRACE, ((TypeContext)_localctx).RBRACE), new AstTrees<AstCompDecl>(compDecls)) ;
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 9);
				{
				setState(111);
				((TypeContext)_localctx).LPAREN = match(LPAREN);
				setState(112);
				((TypeContext)_localctx).type = type();
				setState(113);
				((TypeContext)_localctx).RPAREN = match(RPAREN);
				 ((TypeContext)_localctx).ast =  ((TypeContext)_localctx).type.ast; 
				 _localctx.ast.relocate(Location.createLocation(((TypeContext)_localctx).LPAREN, ((TypeContext)_localctx).RPAREN)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
